<resources>
    <string name="app_name">NearByParking</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_up">SignUP</string>
    <string name="title_activity_owner_page">OwnerPage</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="phnumber">PhoneNumber</string>
    <string name="pname">PARKING SPACE NAME</string>
    <string name="town">TOWN</string>
    <string name="city">CITY</string>
    <string name="landmark">LANDMARK</string>
    <string name="district">DISTRICT</string>
    <string name="state">STATE</string>
    <string name="pincode">PINCODE</string>
</resources>
