<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.startup.nearbyparking.Address">
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="ADDRESS "
        android:id="@+id/textView20"
        android:paddingBottom="20dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pname"
        android:id="@+id/textView28" />


    <EditText
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:id="@+id/editText_psname" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="STREET"
        android:id="@+id/textView2" />



    <EditText
        android:layout_width="323dp"
        android:layout_height="wrap_content"
        android:id="@+id/editText_street"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/town"
        android:id="@+id/textView15" />

    <EditText
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:id="@+id/editText_town"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/city"
        android:id="@+id/textView16" />

    <EditText
        android:layout_width="333dp"
        android:layout_height="wrap_content"
        android:id="@+id/editText_city"
      />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/landmark"
        android:id="@+id/textView17" />

    <EditText
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:id="@+id/editText_landmark" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/district" />

    <EditText
        android:layout_width="333dp"
        android:layout_height="wrap_content"
        android:id="@+id/editText_district"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/state"
        android:id="@+id/textView19" />

    <EditText
        android:layout_width="336dp"
        android:layout_height="wrap_content"
        android:id="@+id/editText_state" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/pincode"
        android:id="@+id/textView21" />

    <EditText
        android:layout_width="334dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText_pincode"
      />




    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SUBMIT"
        android:id="@+id/button_address"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
</ScrollView>
