<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.startup.nearbyparking.SignUp">




    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="SIGN UP HERE"
            android:id="@+id/text222"
            android:paddingBottom="30dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="NAME"
            android:id="@+id/textView4"
            android:paddingLeft="10dp"/>

        <EditText
            android:layout_width="371dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText_pname"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/email"
            android:id="@+id/textView5"
            android:paddingLeft="10dp"/>

        <EditText
            android:layout_width="358dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editText_email" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/password"
            android:id="@+id/textView7"
            android:paddingLeft="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editText_password" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/phnumber"
            android:id="@+id/textView6"
            android:paddingLeft="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/editText_pnumber"/>



            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radiogroup">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Are_u_the_Owner"
                    android:id="@+id/radioButton_Owner"
                    android:checked="false"
                    android:paddingLeft="10dp"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Are_u_the_user"
                    android:id="@+id/radioButton_user"
                    android:checked="false"
                    android:paddingLeft="10dp"/>

            </RadioGroup>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SIGNUP"
            android:paddingBottom="10dp"
            android:id="@+id/button_singup"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already Have an account"
            android:id="@+id/textView_login"
            android:contextClickable="true"

            android:layout_gravity="center_horizontal" />

    </LinearLayout>

</ScrollView>
